# cooking_inspiration

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pyproject.toml
cooking_seasonally/: main.py
cooking_seasonally/EDA/: EDA.ipynb  NER_EDA.ipynb  preprocessing.ipynb
cooking_seasonally/NLP/: prepare_ingredients.py  train_NER_model.py
cooking_seasonally/helpers/: collect_all_recipes.ipynb  recipe.py  text_processing.py  utils.py
cooking_seasonally/recommender/: recommender.py
cooking_seasonally/scrapping/: get_recipes.py
docs/: mkdocs.yml
docs/docs/: index.md
models/NER/: config_word2vec.cfg
models/NER/model-best/: config.cfg
notebooks/: create_dataset_for_NER_training.ipynb  preprocess_dataset_for_NER_training.ipynb  recipe_scrapping.ipynb
references/: references.txt
